[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.md"
packages = [{include = "final_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rl4circopt = {path = "/home/tassos/research/google-research/rl4circopt"}
di-engine = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
