[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.md"
packages = [{include = "final_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ray = {extras = ["rllib"], version = "^2.3.1"}
torch = "^2.0.0"
qiskit = "^0.42.1"
protobuf = "^3.20"
z3-solver = "^4.12.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
